--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
-theme: jekyll-theme-minimal
+title: Christian Hafner
+email: chafner@ist.ac.at
+description: "Christian Hafner, PhD Student, Computational Fabrication, IST Austria"
+baseurl: "" # the subpath of your site, e.g. /blog
+domain: chrishafner.github.io
+url: https://chrishafner.github.io # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  chrishafner
