jekyll sitemap plugin

--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,6 @@ baseurl: "" # the subpath of your site, e.g. /blog
 domain: chrishafner.github.io
 url: https://chrishafner.github.io # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  chrishafner
+
+plugins:
+  - jekyll-sitemap
