--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -46,4 +46,4 @@
   paperlink: "http://pub.ist.ac.at/~chafner/frequency-opt-poster-siggraph-2015.pdf"
   image: img/bell-poster.png
   blurb: "A poster about hand-casted tin bells."
-  type: poster
+  type: "Poster Abstract"
