recording dates; re-recording of linzer tart

--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -1,6 +1,8 @@
 - composer: Nikolai Kapustin
   piece: 24 Jazz Preludes, Op. 53, XI. Andante
   path: https://pub.ist.ac.at/~chafner/music/Kap_pre11.mp3
+  recorded: 2021-10-17
 - composer: Claude Delvincourt
   piece: Croquembouches, II. Linzer tart
-  path: https://pub.ist.ac.at/~chafner/music/del_cr_linzer_tart.mp3
+  path: https://pub.ist.ac.at/~chafner/music/del_cr_linzer_tart_v2.mp3
+  recorded: 2021-10-31
