hindemith piano sonata 3 mvmt1

--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -6,3 +6,7 @@
   piece: Croquembouches, II. Linzer tart
   path: https://pub.ist.ac.at/~chafner/music/del_cr_linzer_tart_v2.mp3
   recorded: 2021-10-31
+- composer: Paul Hindemith
+  piece: Piano Sonata No. 3, I. Ruhig bewegt
+  path: https://pub.ist.ac.at/~chafner/music/hindemith_ps3_1.mp3
+  recorded: 2021-10-31
