added medtner op. 51, no. 3

--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -10,3 +10,7 @@
   piece: Piano Sonata No. 3, I. Ruhig bewegt
   path: https://pub.ist.ac.at/~chafner/music/hindemith_ps3_1.mp3
   recorded: 2021-10-31
+- composer: Nikolai Medtner
+  piece: 6 Tales, Op. 51, No. 3
+  path: https://pub.ist.ac.at/~chafner/music/med51-3.mp3
+  recorded: 2021-11-27
