--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -1,3 +1,7 @@
+- composer: Nikolai Medtner
+  piece: 6 Tales, Op. 51, No. 3
+  path: https://pub.ist.ac.at/~chafner/music/med51-3.mp3
+  recorded: 2021-11-27
 - composer: Nikolai Kapustin
   piece: 24 Jazz Preludes, Op. 53, XI. Andante
   path: https://pub.ist.ac.at/~chafner/music/Kap_pre11.mp3
@@ -6,11 +10,11 @@
   piece: Croquembouches, II. Linzer tart
   path: https://pub.ist.ac.at/~chafner/music/del_cr_linzer_tart_v2.mp3
   recorded: 2021-10-31
+- composer: Claude Delvincourt
+  piece: Croquembouches, IX. Baba
+  path: https://pub.ist.ac.at/~chafner/music/del_cr_baba.mp3
+  recorded: 2021-11-28
 - composer: Paul Hindemith
   piece: Piano Sonata No. 3, I. Ruhig bewegt
   path: https://pub.ist.ac.at/~chafner/music/hindemith_ps3_1.mp3
   recorded: 2021-10-31
-- composer: Nikolai Medtner
-  piece: 6 Tales, Op. 51, No. 3
-  path: https://pub.ist.ac.at/~chafner/music/med51-3.mp3
-  recorded: 2021-11-27
