--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -1,11 +1,15 @@
 - composer: Nikolai Medtner
-  piece: 6 Tales, Op. 51, No. 3
+  piece: 6 Tales, Op. 51, III. Allegretto tranquilo e grazioso
   path: https://pub.ist.ac.at/~chafner/music/med51-3.mp3
   recorded: 2021-11-27
 - composer: Nikolai Kapustin
   piece: 24 Jazz Preludes, Op. 53, XI. Andante
   path: https://pub.ist.ac.at/~chafner/music/Kap_pre11.mp3
   recorded: 2021-10-17
+- composer: Nikolai Kapustin
+  piece: 10 Inventions, Op. 73, III. Allegretto giocoso
+  path: https://pub.ist.ac.at/~chafner/music/kapustin_invention_3.mp3
+  recorded: 2021-12-05
 - composer: Claude Delvincourt
   piece: Croquembouches, II. Linzer tart
   path: https://pub.ist.ac.at/~chafner/music/del_cr_linzer_tart_v2.mp3
