added kapustin invention 5

--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -10,6 +10,10 @@
   piece: 10 Inventions, Op. 73, III. Allegretto giocoso
   path: https://pub.ist.ac.at/~chafner/music/kapustin_invention_3.mp3
   recorded: 2021-12-05
+- composer: Nikolai Kapustin
+  piece: 10 Inventions, Op. 73, V. Grave
+  path: https://pub.ist.ac.at/~chafner/music/kapustin_invention_5.mp3
+  recorded: 2021-12-05
 - composer: Claude Delvincourt
   piece: Croquembouches, II. Linzer tart
   path: https://pub.ist.ac.at/~chafner/music/del_cr_linzer_tart_v2.mp3
