--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -1,28 +1,28 @@
 - composer: Nikolai Medtner
   piece: 6 Tales, Op. 51, III. Allegretto tranquilo e grazioso
-  path: https://pub.ist.ac.at/~chafner/music/med51-3.mp3
+  path: https://pub.ista.ac.at/~chafner/music/med51-3.mp3
   recorded: 2021-11-27
 - composer: Nikolai Kapustin
   piece: 24 Jazz Preludes, Op. 53, XI. Andante
-  path: https://pub.ist.ac.at/~chafner/music/Kap_pre11.mp3
+  path: https://pub.ista.ac.at/~chafner/music/Kap_pre11.mp3
   recorded: 2021-10-17
 - composer: Nikolai Kapustin
   piece: 10 Inventions, Op. 73, III. Allegretto giocoso
-  path: https://pub.ist.ac.at/~chafner/music/kapustin_invention_3.mp3
+  path: https://pub.ista.ac.at/~chafner/music/kapustin_invention_3.mp3
   recorded: 2021-12-05
 - composer: Nikolai Kapustin
   piece: 10 Inventions, Op. 73, V. Grave
-  path: https://pub.ist.ac.at/~chafner/music/kapustin_invention_5.mp3
+  path: https://pub.ista.ac.at/~chafner/music/kapustin_invention_5.mp3
   recorded: 2021-12-05
 - composer: Claude Delvincourt
   piece: Croquembouches, II. Linzer tart
-  path: https://pub.ist.ac.at/~chafner/music/del_cr_linzer_tart_v2.mp3
+  path: https://pub.ista.ac.at/~chafner/music/del_cr_linzer_tart_v2.mp3
   recorded: 2021-10-31
 - composer: Claude Delvincourt
   piece: Croquembouches, IX. Baba
-  path: https://pub.ist.ac.at/~chafner/music/del_cr_baba.mp3
+  path: https://pub.ista.ac.at/~chafner/music/del_cr_baba.mp3
   recorded: 2021-11-28
 - composer: Paul Hindemith
   piece: Piano Sonata No. 3, I. Ruhig bewegt
-  path: https://pub.ist.ac.at/~chafner/music/hindemith_ps3_1.mp3
+  path: https://pub.ista.ac.at/~chafner/music/hindemith_ps3_1.mp3
   recorded: 2021-10-31
