--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -1,3 +1,7 @@
+- composer: Nikolai Kapustin
+  piece: 6 Little Pieces, Op. 133, I. Allegro moderato
+  path: https://pub.ista.ac.at/~chafner/music/kapustin-lp-1.mp3
+  recorded: 2023-07-25
 - composer: Nikolai Medtner
   piece: 6 Tales, Op. 51, III. Allegretto tranquilo e grazioso
   path: https://pub.ista.ac.at/~chafner/music/med51-3.mp3
