--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -6,6 +6,10 @@
   piece: 6 Little Pieces, Op. 133, II. Comodo
   path: https://pub.ista.ac.at/~chafner/music/kapustin-lp-2.mp3
   recorded: 2023-09-14
+- composer: Nikolai Kapustin
+  piece: 6 Little Pieces, Op. 133, III. Allegretto
+  path: https://pub.ista.ac.at/~chafner/music/kapustin-lp-3.mp3
+  recorded: 2023-09-25
 - composer: Nikolai Medtner
   piece: 6 Tales, Op. 51, III. Allegretto tranquilo e grazioso
   path: https://pub.ista.ac.at/~chafner/music/med51-3.mp3
