--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -14,6 +14,10 @@
   piece: 6 Little Pieces, Op. 133, IV. Larghetto
   path: https://pub.ista.ac.at/~chafner/music/kapustin-lp-4.mp3
   recorded: 2023-09-27
+- composer: Nikolai Kapustin
+  piece: 6 Little Pieces, Op. 133, V. Allegro scherzando
+  path: https://pub.ista.ac.at/~chafner/music/kapustin-lp-5.mp3
+  recorded: 2023-10-08
 - composer: Nikolai Medtner
   piece: 6 Tales, Op. 51, III. Allegretto tranquilo e grazioso
   path: https://pub.ista.ac.at/~chafner/music/med51-3.mp3
