--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -1,3 +1,7 @@
+- composer: Nikolai Medtner
+  piece: 4 Tales, Op. 26, I. Allegretto frescamente
+  path: https://pub.ista.ac.at/~chafner/music/medtner-4tales-1.mp3
+  recorded: 2024-02-18
 - composer: Nikolai Kapustin
   piece: 6 Little Pieces, Op. 133, I. Allegro moderato
   path: https://pub.ista.ac.at/~chafner/music/kapustin-lp-1.mp3
