--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -1,3 +1,7 @@
+- composer: Nikolai Kapustin
+  piece: Suite in the Old Style, Op. 28, I. Allemande
+  path: https://pub.ista.ac.at/~chafner/music/kapustin-s28-1.mp3
+  recorded: 2024-04-07
 - composer: Nikolai Medtner
   piece: 4 Tales, Op. 26, I. Allegretto frescamente
   path: https://pub.ista.ac.at/~chafner/music/medtner-4tales-1.mp3
