--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -6,6 +6,10 @@
   piece: Suite in the Old Style, Op. 28, II. Gavotte I – II – I
   path: https://pub.ista.ac.at/~chafner/music/kapustin-s28-2.mp3
   recorded: 2024-04-18
+- composer: Nikolai Kapustin
+  piece: Suite in the Old Style, Op. 28, III. Sarabande
+  path: https://pub.ista.ac.at/~chafner/music/kapustin-s28-3.mp3
+  recorded: 2024-04-19
 - composer: Nikolai Medtner
   piece: 4 Tales, Op. 26, I. Allegretto frescamente
   path: https://pub.ista.ac.at/~chafner/music/medtner-4tales-1.mp3
