--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -1,4 +1,8 @@
 - composer: Nikolai Kapustin
+  piece: Berceuse, Op. 65
+  path: https://pub.ista.ac.at/~chafner/music/kapustin-berceuse.mp3
+  recorded: 2024-05-19
+- composer: Nikolai Kapustin
   piece: Suite in the Old Style, Op. 28
   startcollection: true
 - piece: I. Allemande
