--- a/_data/recordings.yml
+++ b/_data/recordings.yml
@@ -14,6 +14,9 @@
 - piece: III. Sarabande
   path: https://pub.ista.ac.at/~chafner/music/kapustin-s28-3.mp3
   recorded: 2024-04-19
+- piece: IV. Bourrée I – II
+  path: https://pub.ista.ac.at/~chafner/music/kapustin-s28-4.mp3
+  recorded: 2024-06-02
 - endcollection: true
 - composer: Nikolai Medtner
   piece: 4 Tales, Op. 26, I. Allegretto frescamente
