--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -6,6 +6,7 @@
   paperlink: https://pub.ista.ac.at/group_wojtan/projects/2024_Hafner_SIF/sif-final.pdf
   image: img/spin-it-faster.png
   blurb: "A paper about putting hyperboloids into spinning tops."
+  badge: "Technical Papers Awards: Honorable Mention"
 - title: The Design Space of Kirchhoff Rods
   authors: Christian Hafner, Bernd Bickel
   date: 2023-12-01
